Version 0.60:<br/><br/>
    &#8226; New widget<br/>
    &#8226; Style changes to profiles<br/>
    &#8226; Can now search for users by their username as well<br/>
    &#8226; Attach locations to new tweets<br/><br/>
<br/>

Version 0.50:<br/><br/>
    &#8226; Open profiles, hashtags, and websites that are highlighted in tweets<br/>
    &#8226; Can now search for users when composing a new tweet. It will sync your friends when you login and add them if you follow someone<br/>
    &#8226; Manually sync friends option<br/>
    &#8226; Only auto-refresh on wifi option<br/>
    &#8226; Cool landscape mode<br/>
    &#8226; Overhaul of unread tweets and marking them as read<br/>
    &#8226; Attach images from the camera to send<br/>
    &#8226; Notifications can now wake the screen<br/>
    &#8226; Night Mode Option<br/>
    &#8226; 24-Hour Timestamp Option<br/>
    &#8226; Style changes<br/><br/>
<br/>

Version 0.40:<br/><br/>
    &#8226; Support for a second account<br/>
    &#8226; Awesome kitkat styling stuff<br/>
    &#8226; Cool actionable toast bar when scrolling the list<br/>
    &#8226; Hiding action bar as you scroll up the list<br/>
    &#8226; Working popup from the notification<br/>
    &#8226; Quote tweets from the action bar<br/>
    &#8226; Change your own profile info, picture, and banner<br/>
    &#8226; Pager for world and local trends. Requires new permissions<br/>
    &#8226; Vines now show in WebView<br/>
    &#8226; Parse hashtags and users to a different text color in timeline<br/>
    &#8226; Added a default user header if they have no banner<br/>
    &#8226; fixes for list refreshing after clicking notification<br/>
    &#8226; fixes for the notifications and added expanded options for them<br/>
    &#8226; fixes for the unread counts and how they work<br/>
    &#8226; fix for mentions sometimes getting messed up with timeline<br/>
    &#8226; changes to search to allow searching by username<br/><br/>
<br/>
