@@ -21,5 +21,4 @@
 
 - Main TODO:
     - emoji support
-    - DashClock extension
 
